--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@jeefo/bundler",
-    "version": "0.0.1",
-    "homepage": "https://github.com/je3f0o/jeefo_monkey_patcher",
+    "version": "0.0.2",
+    "homepage": "https://github.com/je3f0o/bundler",
     "copyright": "2020",
     "description": "part of jeefo framework",
     "author": {
