--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@jeefo/bundler",
     "version": "0.0.2",
-    "homepage": "https://github.com/je3f0o/bundler",
+    "homepage": "https://github.com/je3f0o/jeefo_bundler",
     "copyright": "2020",
     "description": "part of jeefo framework",
     "author": {
@@ -17,7 +17,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@github.com:je3f0o/bundler.git"
+        "url": "git@github.com:je3f0o/jeefo_bundler.git"
     },
     "keywords": [
         "jeefo",
